--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,8 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
+
+<link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
 	<meta name="description" content="Personal site of Mathieu Gemard">
 	<meta name="author" content="Mathieu Gemard">
 	%sveltekit.head%
